--- a/app/src/main/res/layout/list_item.xml
+++ b/app/src/main/res/layout/list_item.xml
@@ -1,47 +1,55 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
-             android:layout_height="100dp"
-        android:layout_margin="10dp"
-    android:background="@color/black"
-
+             android:layout_height="65dp"
+            android:layout_margin="10dp"
+            android:orientation="horizontal"
     >
 
 
 
     <ImageView
     android:id="@+id/ImagenTrack"
-        android:layout_width="100dp"
-        android:layout_height="100dp"
+        android:layout_width="65dp"
+        android:layout_height="65dp"
         android:src="@drawable/ic_launcher_background"
-        app:cornerRadius="10dp"/>
+       />
 
     <LinearLayout
-        android:layout_width="match_parent"
+
+        android:layout_width="200dp"
         android:layout_height="match_parent"
-        android:orientation="vertical"
-        >
+        android:orientation="vertical">
+
         <TextView
             android:id="@+id/NameTack"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="Titulo cancion"
-            android:textSize="25sp"
+            android:layout_marginStart="5dp"
             android:layout_weight="2"
             android:gravity="center_vertical"
-            android:layout_marginLeft="5dp"
-            />
+            android:text="Titulo cancion"
+            android:textSize="15sp" />
+
         <TextView
             android:id="@+id/AlbumTack"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="Album"
+            android:layout_marginStart="5dp"
+            android:layout_weight="1"
             android:gravity="center_vertical"
+            android:text="Album"
             android:textColor="@color/grey"
             android:textFontWeight="20"
-            android:textSize="15sp"
-            android:layout_weight="1"
-            android:layout_marginLeft="5dp"/>
+            android:textSize="13sp" />
+
     </LinearLayout>
+
+    <ImageView
+        android:layout_width="65dp"
+        android:layout_height="65dp"
+        android:id="@+id/more_actions"
+        android:src="@drawable/more_actions"/>
+
 
 </LinearLayout>
