--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,5 +2,6 @@
 <resources>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
-    <color name="grey">#353535</color>
+    <color name="grey">#505050</color>
+    <color name="Whaterblack">#202020</color>
 </resources>
