--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -12,20 +12,22 @@
         tools:layout="@layout/fragment_music_list">
 
         <action
-            android:id="@+id/action_MusicListFragment_to_SecondFragment"
-            app:destination="@id/SecondFragment" />
+            android:id="@+id/action_MusicListFragment_to_AlbumFragment"
+            app:destination="@id/AlbumFragment" />
         <action
             android:id="@+id/action_FirstFragment_self"
             app:destination="@id/MusicListFragment" />
+
     </fragment>
     <fragment
-        android:id="@+id/SecondFragment"
-        android:name="cr.ac.una.reproductodemusica.SecondFragment"
-        android:label="@string/second_fragment_label"
-        tools:layout="@layout/fragment_second">
+        android:id="@+id/AlbumFragment"
+        android:name="cr.ac.una.reproductodemusica.AlbumFragment"
+        android:label="@string/album_fragment_label"
+        tools:layout="@layout/fragment_album">
 
         <action
-            android:id="@+id/action_SecondFragment_to_MusicListFragment"
+            android:id="@+id/action_AlbumFragment_to_MusicListFragment"
             app:destination="@id/MusicListFragment" />
     </fragment>
+
 </navigation>
