--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -8,11 +8,11 @@
     tools:context=".MainActivity"
     >
 
-    <com.google.android.material.appbar.AppBarLayout
+        <com.google.android.material.appbar.AppBarLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:fitsSystemWindows="true"
-        android:background="#00800010">
+        android:background="@color/green">
 
         <com.google.android.material.appbar.MaterialToolbar
             android:id="@+id/toolbar"
