--- a/app/src/main/res/layout/list_item.xml
+++ b/app/src/main/res/layout/list_item.xml
@@ -19,7 +19,8 @@
 
         android:layout_width="200dp"
         android:layout_height="match_parent"
-        android:orientation="vertical">
+        android:orientation="vertical"
+        android:layout_weight="1">
 
         <TextView
             android:id="@+id/NameTack"
@@ -48,6 +49,7 @@
     <ImageView
         android:layout_width="65dp"
         android:layout_height="65dp"
+        android:padding="15dp"
         android:id="@+id/more_actions"
         android:src="@drawable/more_actions"/>
 
