--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,5 +3,6 @@
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
     <color name="grey">#505050</color>
+    <color name="green">#004225</color>
     <color name="Whaterblack">#202020</color>
 </resources>
