--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -2,7 +2,15 @@
     <!-- Base application theme. -->
     <style name="Base.Theme.ReproductoDeMusica" parent="Theme.Material3.DayNight.NoActionBar">
         <!-- Customize your light theme here. -->
-        <!-- <item name="colorPrimary">@color/my_light_primary</item> -->
+        <item name="colorPrimary">@color/green</item>
+        <item name="android:windowBackground">@color/black</item>
+        <item name="android:navigationBarColor">@color/grey</item>
+        <item name="android:textColor">@color/white</item>
+    </style>
+    <style name="PopupMenuStyle" parent="@style/Widget.AppCompat.PopupMenu">
+        <item name="android:itemBackground">@color/grey</item>
+        <item name="android:textColor">@color/white</item>
+        <!-- Customize any other attributes as desired -->
     </style>
 
     <style name="Theme.ReproductoDeMusica" parent="Base.Theme.ReproductoDeMusica" />
