--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -17,6 +17,10 @@
         <action
             android:id="@+id/action_FirstFragment_self"
             app:destination="@id/MusicListFragment" />
+        <action
+            android:id="@+id/action_MusicListFragment_to_ArtisFragment"
+            app:destination="@id/ArtistFragment"
+            />
 
     </fragment>
     <fragment
@@ -28,6 +32,18 @@
         <action
             android:id="@+id/action_AlbumFragment_to_MusicListFragment"
             app:destination="@id/MusicListFragment" />
+        <action
+            android:id="@+id/action_AlbumFragment_to_ArtistFragment"
+            app:destination="@id/ArtistFragment"
+            />
+
     </fragment>
 
+    <fragment
+        android:id="@+id/ArtistFragment"
+        android:name="cr.ac.una.reproductodemusica.ArtistaFragment"
+        android:label="Artista"
+        tools:layout="@layout/fragment_album">
+
+    </fragment>
 </navigation>
