--- a/app/src/main/res/layout/list_item.xml
+++ b/app/src/main/res/layout/list_item.xml
@@ -7,12 +7,22 @@
     >
 
 
-
+<FrameLayout
+    android:layout_width="65dp"
+    android:layout_height="65dp">
     <ImageView
-    android:id="@+id/ImagenTrack"
+        android:id="@+id/ImagenTrack"
         android:layout_width="65dp"
         android:layout_height="65dp"
-       />
+        />
+    <ImageView
+        android:id="@+id/ImageState"
+        android:layout_width="65dp"
+        android:layout_height="65dp"
+        android:alpha="0.6"
+        />
+</FrameLayout>
+
 
     <LinearLayout
 
