--- a/app/src/main/res/layout/fragment_album.xml
+++ b/app/src/main/res/layout/fragment_album.xml
@@ -1,44 +1,78 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".AlbumFragment"
     android:orientation="vertical">
-    <ImageView
-        android:layout_width="500px"
-        android:layout_height="500px"
-        android:id="@+id/album_image"
-        android:layout_gravity="center"
-        android:layout_marginTop="15dp"/>
-    <TextView
-        android:id="@+id/albumName"
-        android:layout_height="wrap_content"
-        android:layout_width="wrap_content"
-        android:layout_gravity="center"
-        android:textSize="30sp"
-        android:layout_marginTop="5dp"
-        android:text=""
-        />
-    <TextView
-        android:id="@+id/ArtistaName"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center"
-        android:textSize="20sp"
-        android:layout_marginTop="5dp"
-        android:text=""
-        />
 
-    <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/list_tracksAlbum"
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:id="@+id/Albuminfo">
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:orientation="vertical"
+
+               >
+            <ImageView
+                android:layout_width="600px"
+                android:layout_height="600px"
+                android:id="@+id/album_image"
+                android:layout_gravity="center"
+
+               />
+            <TextView
+                android:id="@+id/albumName"
+                android:layout_height="wrap_content"
+                android:layout_width="wrap_content"
+                android:layout_gravity="center"
+                android:textSize="30sp"
+                android:layout_marginTop="5dp"
+                android:text=""
+                />
+            <TextView
+                android:id="@+id/ArtistaName"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:textSize="20sp"
+                android:layout_marginTop="5dp"
+                android:text=""
+                />
+
+
+            </LinearLayout>
+
+        </RelativeLayout>
+
+    <ScrollView
         android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:layout_weight="1"
-        android:layout_marginTop="5dp"
-        />
+        android:layout_height="match_parent"
+        >
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            >
+
+            <androidx.recyclerview.widget.RecyclerView
+                android:id="@+id/list_tracksAlbum"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_alignParentBottom="true"
+                android:layout_marginTop="220dp"
+                android:layout_marginBottom="84dp"
+                android:background="@color/black"
+                />
+        </RelativeLayout>
+
+    </ScrollView>
 
 
 
-</LinearLayout>
+
+
+</FrameLayout>
