--- a/app/src/main/res/layout/fragment_artista.xml
+++ b/app/src/main/res/layout/fragment_artista.xml
@@ -1,35 +1,67 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ArtistaFragment"
-    android:orientation="vertical">
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    tools:context=".ArtistaFragment">
 
-
-    <ImageView
-        android:layout_width="500px"
-        android:layout_height="500px"
-        android:id="@+id/artist_Image"
-        android:layout_gravity="center"
-        android:layout_marginTop="15dp"/>
-    <TextView
-        android:id="@+id/artistName"
-        android:layout_height="wrap_content"
-        android:layout_width="wrap_content"
-        android:layout_gravity="center"
-        android:textSize="30sp"
-        android:layout_marginTop="5dp"
-        android:text=""
-        />
-
-    <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/list_TopArtists"
+    <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:layout_weight="1"
-        android:layout_marginTop="5dp"
-        />
+        android:layout_height="match_parent">
+
+        <ImageView
+            android:id="@+id/artist_Image"
+            app:layout_constraintDimensionRatio="1:1"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            android:layout_width="0dp"
+            android:layout_height="0dp" />
+
+        <ImageView
+            android:id="@+id/album_image2"
+            app:layout_constraintDimensionRatio="1:1"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            android:layout_width="0dp"
+            android:layout_height="0dp"
+            android:background="@drawable/gradient_color" />
+
+        <TextView
+            android:id="@+id/artistName"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textSize="30sp"
+            app:layout_constraintBottom_toBottomOf="@+id/artist_Image"
+            app:layout_constraintEnd_toEndOf="@+id/artist_Image"
+            app:layout_constraintStart_toStartOf="@+id/artist_Image"/>
 
 
-</LinearLayout>
+    </androidx.constraintlayout.widget.ConstraintLayout>
+
+
+    <ScrollView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+
+            <androidx.recyclerview.widget.RecyclerView
+                android:id="@+id/list_TopArtists"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_alignParentBottom="true"
+                android:layout_marginTop="275dp"
+                android:layout_marginBottom="84dp"
+                android:background="@color/black" />
+
+        </RelativeLayout>
+
+    </ScrollView>
+
+
+</FrameLayout>
