--- a/app/src/main/res/layout/fragment_artista_rel.xml
+++ b/app/src/main/res/layout/fragment_artista_rel.xml
@@ -1,61 +1,45 @@
 <?xml version="1.0" encoding="utf-8"?>
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
-    tools:context=".AlbumFragment">
-
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    tools:context=".ArtistaRelFragment">
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        >
+        android:layout_height="match_parent">
 
         <ImageView
-            android:id="@+id/album_image"
-            android:layout_width="0dp"
-            android:layout_height="0dp"
+            android:id="@+id/artist_Image"
             app:layout_constraintDimensionRatio="1:1"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            />
+            android:layout_width="0dp"
+            android:layout_height="0dp" />
+
         <ImageView
             android:id="@+id/album_image2"
-            android:layout_width="0dp"
-            android:layout_height="0dp"
             app:layout_constraintDimensionRatio="1:1"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            android:background="@drawable/gradient_color"
-            />
-        <TextView
-            android:id="@+id/albumName"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Nombre del álbum"
-            android:textSize="30sp"
-            app:layout_constraintBottom_toTopOf="@+id/ArtistaName"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"/>
-
-
+            android:layout_width="0dp"
+            android:layout_height="0dp"
+            android:background="@drawable/gradient_color" />
 
         <TextView
-            android:id="@+id/ArtistaName"
+            android:id="@+id/artistName"
+            app:layout_constraintBottom_toBottomOf="@+id/artist_Image"
+            app:layout_constraintEnd_toEndOf="@+id/artist_Image"
+            app:layout_constraintStart_toStartOf="@+id/artist_Image"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Nombre del artista"
-            android:textSize="20sp"
-            app:layout_constraintBottom_toBottomOf="@+id/album_image"
-            app:layout_constraintEnd_toEndOf="@+id/album_image"
-            app:layout_constraintStart_toStartOf="@+id/album_image" />
+            android:textSize="30sp" />
+
 
     </androidx.constraintlayout.widget.ConstraintLayout>
-
 
 
     <ScrollView
@@ -67,7 +51,7 @@
             android:layout_height="wrap_content">
 
             <androidx.recyclerview.widget.RecyclerView
-                android:id="@+id/list_tracksAlbum"
+                android:id="@+id/list_TopArtists"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_alignParentBottom="true"
